# hustle

./: .gitignore  .travis.yml  Brewfile  CMakeLists.txt  README.md  background_on_select_remove.txt  background_on_tatp.txt  eager_on_select_remove.txt  eager_on_tatp.txt  early_on_write.txt  hustle.cfg  install_arrow.sh  install_arrow_cpp20.sh  install_requirements.sh  install_requirements_cpp20.sh  lazy_on_select_remove.txt  lazy_on_tatp.txt  lazy_on_write.txt  lint_everything.py  profile.py  results.txt  run_benchmark.sh  run_test.sh  select.cpp  sqlite3_on_write.txt  sqlite_on_select_remove.txt  sqlite_on_tatp.txt
src/: CMakeLists.txt  FindArrow.cmake  HustleDB.cpp  HustleDB.h  empty_src.cpp  hustle.cpp  main.cc  main.cpp  run.cc
src/api/: CMakeLists.txt  HustleDB.cpp  HustleDB.h  hustle_db.cc  hustle_db.h
src/api/tests/: hustleDB_test.cpp  hustle_db_test.cc  sql_join_test.cc  sql_test.cc  sql_test_misc.cc
src/benchmark/: CMakeLists.txt  aggregate_workload.cc  aggregate_workload.h  main.cc  ssb_queries.cc  ssb_queries.h  ssb_workload.cc  ssb_workload.h  ssb_workload_lip.cc  tatp_workload.cc  tatp_workload.h
src/benchmark/monetdb/: all.sh  (+12 more)
src/bitweaving/: CMakeLists.txt  bitvector.cpp  bitvector.h  bitvector_block.cpp  bitvector_block.h  bitvector_iterator.cpp  bitvector_iterator.h  bitweaving_compare.cpp  bitweaving_compare.h  bitweaving_index.cpp  bitweaving_index.h  bitweaving_util.cc  bitweaving_util.h  bitwise.h  bwh_column_block.cpp  bwh_column_block.h  bwh_column_iterator.cpp  bwh_column_iterator.h  bwv_column_block.cpp  bwv_column_block.h  bwv_column_iterator.cpp  bwv_column_iterator.h  column.cpp  column.h  column_block.h  column_iterator.cpp  column_iterator.h  doxy.h  env.cpp  env.h  file.cpp  file.h  iterator.cpp  iterator.h  naive_column_block.cpp  naive_column_block.h  options.cpp  options.h  rdtsc.h  status.h  (+5 more)
src/catalog/: CMakeLists.txt  Catalog.cpp  Catalog.h  ColumnSchema.h  TableSchema.cpp  TableSchema.h  catalog.cc  catalog.h  column_schema.h  table_schema.cc  table_schema.h
src/execution/: CMakeLists.txt  ExecutionPlan.cpp  ExecutionPlan.hpp  execution_plan.cc  execution_plan.h
src/frontend/: CMakeLists.txt  HustleFrontend.cpp  HustleFrontend.h  ParseTree.h
src/operators/: Aggregate.cpp  Aggregate.h  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  Join.cpp  Join.h  JoinGraph.cpp  JoinGraph.h  JoinTree.cpp  JoinTree.h  LIP.cpp  LIP.h  LazyTable.cpp  LazyTable.h  Operator.cpp  Operator.h  OperatorResult.cpp  OperatorResult.h  OrderBy.cpp  OrderBy.h  Predicate.cpp  Predicate.h  Project.cpp  Project.h  README.md  Select.cpp  Select.h  aggregate.cc  aggregate.h  aggregate_const.h  aggregate_options.h  base_aggregate.h  expression.cc  expression.h  hash_aggregate.cc  hash_aggregate.h  join.cc  join.h  join_graph.cc  (+13 more)
src/optimizer/: CMakeLists.txt  ExecutionPlan.cpp  ExecutionPlan.hpp  reorder_joins.cc  reorder_joins.h
src/parser/: CMakeLists.txt  ParseTree.cpp  ParseTree.h  Parser.cpp  Parser.h  parse_tree.cc  parse_tree.h  parser.cc  parser.h
src/resolver/: CMakeLists.txt  Plan.cpp  Plan.h  Readme.md  Resolver.cpp  Resolver.h  cresolver.cc  cresolver.h  plan.cc  plan.h  resolver.cc  resolver.h  select_resolver.cc  select_resolver.h
src/scheduler/: Block.h  CMakeLists.txt  Channel.cpp  Channel.h  Node.hpp  Scheduler.cpp  Scheduler.hpp  SchedulerFlags.cpp  SchedulerInterface.hpp  SchedulerMessage.hpp  SchedulerTypedefs.hpp  Task.hpp  TaskDescription.hpp  TaskName.hpp  TaskStatistics.cpp  TaskStatistics.hpp  Worker.cpp  Worker.hpp  WorkerMessage.hpp  node.h  scheduler.cc  scheduler.h  scheduler_flags.cc  scheduler_flags.h  scheduler_interface.h  scheduler_message.h  scheduler_typedefs.h  task.h  task_description.h  task_name.h  task_statistics.cc  task_statistics.h  worker.cc  worker.h  worker_message.h
src/ssb/: CMakeLists.txt  load_tables.cpp  main.cc  main.cpp  notes.md  ssb_workload.cc  ssb_workload.cpp  ssb_workload.h  ssb_workload_lip.cc  ssb_workload_lip.cpp  workload.cpp
src/storage/: CMakeLists.txt  base_block.cc  base_block.h  base_table.cc  base_table.h  block.cc  block.h  block_metadata.h  cmemlog.c  cmemlog.cc  cmemlog.h  cmemlog_dep.h  hustle_block.cc  hustle_block.h  hustle_index.cc  hustle_index.h  hustle_storable.cc  hustle_storable.h  hustle_table.cc  hustle_table.h  index_aware_table.cc  index_aware_table.h  indexed_block.cc  indexed_block.h  ma_block.cc  ma_block.h  metadata_unit.h  metadata_wrapper.cc  metadata_wrapper.h  record_transformer.h  table.cc  table.h  util.cc  util.h
src/table/: CMakeLists.txt  FindArrow.cmake  Index.h  Makefile  Predicate.cpp  Predicate.h  block.cc  block.cpp  block.h  table.cc  table.cpp  table.h  util.cc  util.cpp  util.h
src/tests/: hustleDB_test.cpp
src/threading/: CMakeLists.txt  Mutex.hpp  SpinMutex.hpp  SynchronizationLock.hpp  mutex.h  spin_mutex.h  synchronization_lock.h  thread_util.h
src/txbench/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  loader.h  random_generator.cpp  random_generator.h  worker.h
src/type/: CMakeLists.txt  type_helper.cc  type_helper.cpp  type_helper.h  type_macros.h
src/types/: CMakeLists.txt  Types.h  types.h
src/utility/: CMakeLists.txt  EventProfiler.cpp  EventProfiler.hpp  SyncStream.hpp  ThreadSafeQueue.hpp
src/utility2/: CMakeLists.txt  EventProfiler.cpp  EventProfiler.hpp  Macros.hpp  SyncStream.hpp  ThreadSafeQueue.hpp
src/utils/: BlockedBloomFilter.h  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  ContainerUtil.hpp  ContextPool.cpp  ContextPool.h  EventProfiler.cpp  EventProfiler.hpp  Histogram.h  Macros.hpp  MurmurHash3.cpp  SyncStream.hpp  ThreadSafeQueue.hpp  arrow_compute_wrappers.cc  arrow_compute_wrappers.cpp  arrow_compute_wrappers.h  arrow_utils.h  bit_utils.h  blocked_bloom_filter.h  bloom_filter.h  config.h  container_util.h  context_pool.cc  context_pool.h  disjoint_set_forest.h  event_profiler.cc  event_profiler.h  histogram.h  macros.h  map_utils.h  parallel_utils.h  skew.h  sqlite_utils.cc  sqlite_utils.cpp  sqlite_utils.h  sqlite_utils_parse.cc  sqlite_utils_parse.h  string_utils.h  string_utils.h.tmp  (+5 more)
(+206 files in other folders)
